# jambonz-sample-app

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
charts/sample-app/: Chart.yaml  values.yaml
charts/sample-app/templates/: deployment.yaml  ingress.yaml  service.yaml
sample/: main.py
